V0.2.9.1 Fix: added ontouchstart to body to enable button:active in mobile, title: set lower for white space, decreased width and disappears in mobile view, search bar: reduction in size, wider in mobile view, added icon in mobile, menu button: smaller buttons, more margin spacing

--- a/src/layout/App.css
+++ b/src/layout/App.css
@@ -36,24 +36,28 @@ html {
 
 /* Section: Title */
 
-.site-title {
-  text-align: center;
-  padding-top: 50px;
+.title-section {
+  padding-top: 160px;
   max-width: 750px;
+  text-align: center;
   width: 80%;
+  margin: 0 auto;
   font-family: Montserrat, sans-serif;
 }
 
-.site-title h1 {
+.title-section h1 {
   color: #ffffff;
   font-size: 400%;
-  font-weight: 300;
+  font-weight: 600;
   font-family: Montserrat, sans-serif;
 }
-.site-title h4 {
-  margin-top: 10px;
+.title-section h4 {
   color: #e0e0e0;
+  margin: 0 auto;
+  margin-top: 10px;
+  line-height: 145%;
   font-size: 120%;
+  max-width: 600px;
   font-family: Montserrat, sans-serif;
 }
 
@@ -75,7 +79,6 @@ html {
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
-  /* margin-bottom: 100px; */
   width: 80%;
   max-width: 750px;
 }
@@ -91,13 +94,13 @@ html {
   background-color: white;
   padding: 10px 20px;
   flex-grow: 2;
-  font-size: 200%;
+  font-size: 180%;
   width: 100%;
   letter-spacing: 0.5px;
-  height: 100%;
+  height: 50px;
   font-family: Montserrat, sans-serif;
-
   border: none;
+  border-radius: 20px 0px 0px 20px;
 }
 
 .term-input:focus {
@@ -121,10 +124,19 @@ html {
   font-size: 140%;
   cursor: pointer;
   transition: background-color 0.5s;
+  border-radius: 0px 20px 20px 0px;
 }
 
 .search-btn:hover {
   background-color: #f0b411;
+}
+
+.search-btn-mobile {
+  display: none;
+}
+
+.search-btn-mobile i {
+  font-size: 130%;
 }
 
 .err-msg {
@@ -154,7 +166,7 @@ html {
   align-items: center;
   max-width: 750px;
   width: 80%;
-  margin: 20px 0;
+  margin-top: 30px;
 }
 
 .menu-btn {
@@ -164,8 +176,8 @@ html {
   font-family: Montserrat, sans-serif;
   color: #5a564d;
   margin: 0 5px;
-  padding: 10px 10px;
-  font-size: 135%;
+  padding: 7px 15px;
+  font-size: 120%;
   border-radius: 5px;
   transition: background-color 0.5s;
 }
@@ -174,9 +186,9 @@ html {
   background-color: #9cc3d6;
 }
 
-.menu-btn:focus {
+/* .menu-btn:focus {
   background-color: #f5cb5c;
-}
+} */
 
 .menu-btn:active {
   background-color: #f5cb5c;
@@ -188,6 +200,7 @@ html {
 
 .btn-content-container {
   width: 100%;
+  margin-top: 20px;
 }
 
 .btn-content {
